Adding to the analysis

--- a/Airbnb_Analysis.ipynb
+++ b/Airbnb_Analysis.ipynb
@@ -40,14 +40,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "8beb5139",
-   "metadata": {},
-   "source": [
-    "No much cleaning is needed so we are going to do initial chscks before we strat the analysis"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "198c1dd1",
@@ -171,53 +163,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d0cae816",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['id', 'listing_url', 'scrape_id', 'last_scraped', 'source', 'name',\n",
-       "       'description', 'neighborhood_overview', 'picture_url', 'host_id',\n",
-       "       'host_url', 'host_name', 'host_since', 'host_location', 'host_about',\n",
-       "       'host_response_time', 'host_response_rate', 'host_acceptance_rate',\n",
-       "       'host_is_superhost', 'host_thumbnail_url', 'host_picture_url',\n",
-       "       'host_neighbourhood', 'host_listings_count',\n",
-       "       'host_total_listings_count', 'host_verifications',\n",
-       "       'host_has_profile_pic', 'host_identity_verified', 'neighbourhood',\n",
-       "       'neighbourhood_cleansed', 'neighbourhood_group_cleansed', 'latitude',\n",
-       "       'longitude', 'property_type', 'room_type', 'accommodates', 'bathrooms',\n",
-       "       'bathrooms_text', 'bedrooms', 'beds', 'amenities', 'price',\n",
-       "       'minimum_nights', 'maximum_nights', 'minimum_minimum_nights',\n",
-       "       'maximum_minimum_nights', 'minimum_maximum_nights',\n",
-       "       'maximum_maximum_nights', 'minimum_nights_avg_ntm',\n",
-       "       'maximum_nights_avg_ntm', 'calendar_updated', 'has_availability',\n",
-       "       'availability_30', 'availability_60', 'availability_90',\n",
-       "       'availability_365', 'calendar_last_scraped', 'number_of_reviews',\n",
-       "       'number_of_reviews_ltm', 'number_of_reviews_l30d', 'first_review',\n",
-       "       'last_review', 'review_scores_rating', 'review_scores_accuracy',\n",
-       "       'review_scores_cleanliness', 'review_scores_checkin',\n",
-       "       'review_scores_communication', 'review_scores_location',\n",
-       "       'review_scores_value', 'license', 'instant_bookable',\n",
-       "       'calculated_host_listings_count',\n",
-       "       'calculated_host_listings_count_entire_homes',\n",
-       "       'calculated_host_listings_count_private_rooms',\n",
-       "       'calculated_host_listings_count_shared_rooms', 'reviews_per_month'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
    "id": "3d914d8f",
    "metadata": {},
    "outputs": [],
@@ -262,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "519a39af",
    "metadata": {
     "scrolled": false
@@ -620,7 +565,7 @@
        "max                                      15.000000  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -631,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "2bb48af0",
    "metadata": {
     "scrolled": true
@@ -648,7 +593,7 @@
        "Name: proportion, dtype: float64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -775,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "f7eafac5",
    "metadata": {},
    "outputs": [],
@@ -785,10 +730,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "ba6ff3f6",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -800,7 +745,7 @@
        "Name: proportion, dtype: float64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -828,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "39bbfa96",
    "metadata": {},
    "outputs": [
@@ -838,7 +783,7 @@
        "5573"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -849,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "3bba9839",
    "metadata": {
     "scrolled": true
@@ -1651,7 +1596,7 @@
        " 18182930]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1664,7 +1609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "5973d9d6",
    "metadata": {
     "scrolled": true
@@ -1694,7 +1639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "f188d89c",
    "metadata": {
     "scrolled": true
@@ -1751,7 +1696,7 @@
        "Name: proportion, dtype: float64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1796,7 +1741,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1616954",
+   "id": "60a445c6",
    "metadata": {},
    "source": [
     "### Καθαρίζουμε τις τιμές\n"
@@ -1853,7 +1798,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4196650d",
+   "id": "af03dd15",
    "metadata": {},
    "source": [
     "### Για κάθε περιοχή ξεχωριστά"
@@ -2791,7 +2736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "id": "2631c4f2",
    "metadata": {
     "scrolled": true
@@ -2890,7 +2835,7 @@
        "Name: cleaned_price, dtype: float64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2901,7 +2846,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3711ea76",
+   "id": "c707e813",
    "metadata": {},
    "source": [
     "### Για όλη την Αθήνα"
@@ -2909,8 +2854,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "a7a0f05c",
+   "execution_count": 27,
+   "id": "b86ebe15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2919,33 +2864,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "3330d1ab",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "19.548872180451127"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Ποσοστιαία διαφορά\n",
-    "# |(A-B)|/((A + B)/2)% \n",
-    "\n",
-    "precentage_difference=((prof_hosts-amateur_hosts)/((prof_hosts+amateur_hosts)/2))*100\n",
-    "precentage_difference"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "id": "60ed1439",
+   "execution_count": 32,
+   "id": "4178aa7a",
    "metadata": {
     "scrolled": true
    },
@@ -2956,7 +2876,7 @@
        "'Η μέση τιμή του διαμερίσματος ανά μέρα για τους οικοδεσπότες με 3 και πάνω ακίνητα είναι 73.0 και για όσους έχουν έχουν κάτω απο 3 είναι 60.0. Οι τιμές αυτές έχουν διαφορά 20%'"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2971,8 +2891,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "3a44ee6e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "19.548872180451127"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Ποσοστιαία διαφορά\n",
+    "# |(A-B)|/((A + B)/2)% \n",
+    "\n",
+    "precentage_difference=((prof_hosts-amateur_hosts)/((prof_hosts+amateur_hosts)/2))*100\n",
+    "precentage_difference"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "c65d418f",
+   "id": "397a15ac",
    "metadata": {},
    "source": [
     "## Ποιές είναι οι 5 περιοχές με τη μεγαλύτερη διαφορά τιμών;"
@@ -2980,8 +2925,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "4375292f",
+   "execution_count": 33,
+   "id": "b3fe5ccb",
    "metadata": {},
    "outputs": [
     {
@@ -3621,7 +3566,7 @@
        "85                   ΣΤΑΘΜΟΣ ΛΑΡΙΣΗΣ                1    52.0"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3633,8 +3578,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "b91d1353",
+   "execution_count": 34,
+   "id": "de7398f8",
    "metadata": {
     "scrolled": true
    },
@@ -3647,8 +3592,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "8af9a976",
+   "execution_count": 35,
+   "id": "0822f92d",
    "metadata": {
     "scrolled": true
    },
@@ -3659,8 +3604,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "9327169b",
+   "execution_count": 36,
+   "id": "920ae69b",
    "metadata": {
     "scrolled": true
    },
@@ -3671,8 +3616,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "9118ebc7",
+   "execution_count": 37,
+   "id": "9d432548",
    "metadata": {},
    "outputs": [
     {
@@ -3681,7 +3626,7 @@
        "' Οι 5 γειτονιές με τη μεγαλύτερη διαφορά τιμών μεταξύ των επαγγελματιών hostκαι των ερασιτεχνών είναι οι ΠΟΛΥΓΩΝΟ, 1Ο ΝΕΚΡΟΤΑΦΕΙΟ, ΖΑΠΠΕΙΟ, ΡΙΖΟΥΠΟΛΗ, ΑΓΙΟΣ ΕΛΕΥΘΕΡΙΟΣ'"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3696,8 +3641,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "045904c9",
+   "execution_count": 38,
+   "id": "90154150",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3714,17 +3659,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "32c9a1e7",
+   "execution_count": 53,
+   "id": "b2055d14",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "' Σε 31 περιοχές της Αθήνας, τα διαμερίσματα που ανήκουν σε επαγγελματίες hosts είναι πιο ακριβά από ότι τα διαμερίσματα που ανήκουν σε ερασιτέχνες hosts που είναι ακριβότερα σε 8 περιοχές.'"
+       "'Σε 30 περιοχές της Αθήνας, τα διαμερίσματα που ανήκουν σε επαγγελματίες hosts είναι πιο ακριβά από ότι τα διαμερίσματα που ανήκουν σε ερασιτέχνες hosts που είναι ακριβότερα σε 8 περιοχές.'"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3733,14 +3678,22 @@
     "more_than_0= len(more)\n",
     "less_than_0= len(less)\n",
     "\n",
-    "text= f' Σε {more_than_0} περιοχές της Αθήνας, τα διαμερίσματα που ανήκουν σε επαγγελματίες hosts είναι πιο ακριβά από \\\n",
+    "text= f'Σε {more_than_0} περιοχές της Αθήνας, τα διαμερίσματα που ανήκουν σε επαγγελματίες hosts είναι πιο ακριβά από \\\n",
     "ότι τα διαμερίσματα που ανήκουν σε ερασιτέχνες hosts που είναι ακριβότερα σε {less_than_0} περιοχές.'\n",
     "text"
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4b22fd47",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
-   "id": "50b72615",
+   "id": "68728d2d",
    "metadata": {},
    "source": [
     "## Ας συγκρίνουμε τα ίδια διαμερίσματα"
@@ -3748,8 +3701,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "id": "cb8e0615",
+   "execution_count": 40,
+   "id": "fe27bedb",
    "metadata": {
     "scrolled": true
    },
@@ -3760,7 +3713,7 @@
        "3433"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3772,8 +3725,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "id": "8a98ffbe",
+   "execution_count": 41,
+   "id": "ae6c7063",
    "metadata": {},
    "outputs": [
     {
@@ -4643,7 +4596,7 @@
        "81   54.000000  "
       ]
      },
-     "execution_count": 61,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4657,8 +4610,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "id": "9903d558",
+   "execution_count": 42,
+   "id": "e55754fe",
    "metadata": {
     "scrolled": true
    },
@@ -4752,7 +4705,7 @@
        "Name: cleaned_price, dtype: float64"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4763,16 +4716,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4076a74f",
+   "id": "bacd265a",
    "metadata": {},
    "source": [
-    "### Gia olh thn Athina"
+    "### Για όλη την Αθήνα"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "id": "fbc61722",
+   "execution_count": 43,
+   "id": "14912b52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4781,8 +4734,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
-   "id": "fdbcc877",
+   "execution_count": 44,
+   "id": "bd66ad6e",
    "metadata": {},
    "outputs": [
     {
@@ -4791,7 +4744,7 @@
        "19.548872180451127"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4803,8 +4756,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "id": "ce867ee0",
+   "execution_count": 45,
+   "id": "920fbeda",
    "metadata": {},
    "outputs": [
     {
@@ -4813,7 +4766,7 @@
        "'Η μέση τιμή του διαμερίσματος ανά μέρα για τους οικοδεσπότες με 3 και πάνω ακίνητα είναι 68.0 και για όσους έχουν έχουν κάτω απο 3 είναι 58.0. Οι τιμές αυτές έχουν διαφορά 20%'"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4829,7 +4782,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ede2d3bb",
+   "id": "8fa48ab2",
    "metadata": {},
    "source": [
     "### Ποιές είναι οι 5 περιοχές με τη μεγαλύτερη διαφορά τιμών;"
@@ -4837,8 +4790,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
-   "id": "91603a61",
+   "execution_count": 46,
+   "id": "0d59f90c",
    "metadata": {},
    "outputs": [
     {
@@ -5450,7 +5403,7 @@
        "81                   ΣΤΑΘΜΟΣ ΛΑΡΙΣΗΣ                1    54.5"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5462,8 +5415,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "id": "6dd0bacb",
+   "execution_count": 47,
+   "id": "71972a1b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5474,8 +5427,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "id": "b5fe594e",
+   "execution_count": 48,
+   "id": "a87cb02e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5484,8 +5437,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "id": "13d55384",
+   "execution_count": 49,
+   "id": "47e865f9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5494,8 +5447,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
-   "id": "708d5216",
+   "execution_count": 50,
+   "id": "2febbfed",
    "metadata": {},
    "outputs": [
     {
@@ -5504,7 +5457,7 @@
        "' Οι 5 γειτονιές με τη μεγαλύτερη διαφορά τιμών μεταξύ των επαγγελματιών hostκαι των ερασιτεχνών είναι οι ΠΕΔΙΟ ΑΡΕΩΣ, ΒΟΤΑΝΙΚΟΣ, 1Ο ΝΕΚΡΟΤΑΦΕΙΟ, ΑΝΩ ΠΑΤΗΣΙΑ, ΛΥΚΑΒΗΤΤΟΣ'"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5519,8 +5472,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "id": "ee2f1d82",
+   "execution_count": 51,
+   "id": "fd949981",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5537,8 +5490,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "id": "56b40709",
+   "execution_count": 52,
+   "id": "c2a6f6fd",
    "metadata": {},
    "outputs": [
     {
@@ -5547,7 +5500,7 @@
        "' Σε 30 περιοχές της Αθήνας, τα διαμερίσματα που ανήκουν σε επαγγελματίες hosts είναι πιο ακριβά από ότι τα διαμερίσματα που ανήκουν σε ερασιτέχνες hosts που είναι ακριβότερα σε 8 περιοχές.'"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5556,7 +5509,7 @@
     "more_than_0= len(more)\n",
     "less_than_0= len(less)\n",
     "\n",
-    "text= f' Σε {more_than_0} περιοχές της Αθήνας, τα διαμερίσματα που ανήκουν σε επαγγελματίες hosts είναι πιο ακριβά από \\\n",
+    "text= f'Σε {more_than_0} περιοχές της Αθήνας, τα διαμερίσματα που ανήκουν σε επαγγελματίες hosts είναι πιο ακριβά από \\\n",
     "ότι τα διαμερίσματα που ανήκουν σε ερασιτέχνες hosts που είναι ακριβότερα σε {less_than_0} περιοχές.'\n",
     "text"
    ]
@@ -5564,7 +5517,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de95a7e0",
+   "id": "8a6bdbb8",
    "metadata": {},
    "outputs": [],
    "source": []
