--- a/Airbnb_same_apartments.ipynb
+++ b/Airbnb_same_apartments.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 1,
    "id": "947bb535",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "id": "abc2f311",
    "metadata": {},
    "outputs": [],
@@ -1505,6 +1505,18 @@
     "# και στήνουμε το df ώστε να φαίνονται πρώτες οι περιοχές με τη μεγαλύτερη διαφορά\n",
     "pay_comp['price_difference']= (pay_comp.more_than_3 - pay_comp.less_than_3 )\n",
     "pay_comp = pay_comp.sort_values(by='price_difference', ascending=False).reset_index(drop=True).copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "6df935b3",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "pay_comp.to_csv(\"pay_comp.csv\")\n"
    ]
   },
   {
